src/components/sections/home/fast-and-secure/fast-and-secure.module.scss
@import 'css/variables';
@import 'css/helpers';

.section {
  margin-top: 112px;

  .tabs {
    margin-top: 48px;
  }

  .content {
    display: none;

    .line-container {
      display: flex;
      justify-content: center;

      .line {
        width: 3px;
        height: 90px;
        background: linear-gradient(
          to bottom,
          var(--color-pink-crayon),
          var(--color-transparent)
        );
      }
    }

    .description {
      text-align: center;
      margin-top: 24px;
    }
  }
}

.grid-container {
  margin-top: 64px;
  position: relative;
  display: none;
  justify-content: center;
  @include space-x(min(32px, tovw(24px, $screen-lg)));
}

.carousel-container {
  position: relative;

  .left-gradient,
  .right-gradient {
    --direction: to right;

    pointer-events: none;
    position: absolute;
    top: 0;
    bottom: 0;
    width: 30%;
    z-index: var(--z-index-10);
    max-width: 150px;
    background: linear-gradient(
      var(--direction),
      var(--color-white),
      var(--color-transparent)
    );
  }

  .left-gradient {
    --direction: to right;

    left: 0;
  }

  .right-gradient {
    --direction: to left;

    right: 0;
  }

  .slider {
    max-width: 100%;
    overflow: hidden;
    display: flex;
    justify-content: space-between;
    margin-top: 64px;

    .slider-container {
      @include space-x(36px);

      max-width: max-content;
      margin: 0 auto;
    }

    .slide {
      .description {
        text-align: center;
        margin-top: 48px;
      }
    }
  }
}

@media (min-width: $screen-md) {
  .section {
    .tabs {
      margin-top: 112px;
    }
  }
}

@media (min-width: $screen-lg) {
  .section {
    margin-top: 200px;

    .content {
      display: block;
    }
  }

  .grid-container {
    display: flex;
  }

  .carousel-container {
    display: none;
  }
}

